<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.vtctools.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="45dp"
            android:textColor="@color/colorWhite"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:textSize="21dp"
            />

        <EditText
            android:id="@+id/edittext_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_home_black_18dp"
            android:gravity="center_vertical"
            android:hint="@string/from"
            android:includeFontPadding="false"
            android:inputType="textPostalAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edittext_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_home_black_18dp"
            android:includeFontPadding="false"
            android:gravity="center_vertical"
            android:hint="@string/to"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/colorMetroUICyan"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_search_white_18dp"
            android:includeFontPadding="false"
            android:gravity="center_vertical"
            android:text="@string/calculate"
            />

        <LinearLayout
            android:id="@+id/linear_layout_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/from"
                />

            <TextView
                android:id="@+id/textview_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/to"
                />

            <TextView
                android:id="@+id/textview_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/distance"
                />

            <TextView
                android:id="@+id/textview_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/distance"
                />

            <TextView
                android:id="@+id/textview_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/price"
                />

            <TextView
                android:id="@+id/textview_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorTransparent"
                android:textSize="12sp"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
